--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "iron-session": "^8.0.4",
+    "lru-cache": "^11.2.6",
     "lucide-react": "^0.564.0",
     "next": "16.1.3",
     "next-themes": "^0.4.6",
