--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.564.0",
     "next": "16.1.3",
     "next-themes": "^0.4.6",
+    "parse-diff": "^0.11.1",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
