--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "rehype-prism-plus": "^2.0.2",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
+    "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2"
   },
